home article finish

--- a/index.html
+++ b/index.html
@@ -63,5 +63,99 @@
         </div>
       </div>
     </header>
+    <!-- Home Articles -->
+    <section id="home-articles" class="py-2">
+      <div class="container">
+        <h2>Editor Picks</h2>
+        <div class="articles-container">
+          <article class="card">
+            <img src="img/article/ent1.jpg" alt="" />
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                magni dolorem molestias similique eveniet nostrum, assumenda
+                illum quidem minima autem.
+              </p>
+            </div>
+          </article>
+          <article class="card bg-dark">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              magni dolorem molestias similique eveniet nostrum, assumenda illum
+              quidem minima autem.
+            </p>
+          </article>
+          <article class="card">
+            <img src="img/article/tech1.jpg" alt="" />
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              magni dolorem molestias similique eveniet nostrum, assumenda illum
+              quidem minima autem.
+            </p>
+          </article>
+          <article class="card">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              magni dolorem molestias similique eveniet nostrum, assumenda illum
+              quidem minima autem.
+            </p>
+            <img src="img/article/tech2.jpg" alt="" />
+          </article>
+          <article class="card">
+            <img src="img/article/tech1.jpg" alt="" />
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              magni dolorem molestias similique eveniet nostrum, assumenda illum
+              quidem minima autem.
+            </p>
+          </article>
+          <article class="card bg-primary">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              magni dolorem molestias similique eveniet nostrum, assumenda illum
+              quidem minima autem.
+            </p>
+          </article>
+          <article class="card">
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                magni dolorem molestias similique eveniet nostrum, assumenda
+                illum quidem minima autem.
+              </p>
+            </div>
+            <img src="img/article/ent2.jpg" alt="" />
+          </article>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
