home page finish

--- a/index.html
+++ b/index.html
@@ -157,5 +157,46 @@
         </div>
       </div>
     </section>
+    <!-- Footer -->
+    <footer id="main-footer" class="py-2">
+      <div class="container footer-container">
+        <div>
+          <img src="img/logo.png" alt="" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit
+            asperiores velit rerum veritatis. Voluptatum, molestias consequatur?
+            Voluptatibus laborum laboriosam et.
+          </p>
+        </div>
+        <div>
+          <h3>Email Newsletter</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <form action="">
+            <input type="email" placeholder="Enter email:" />
+            <input type="submit" value="Subscribe" class="btn btn-primary" />
+          </form>
+        </div>
+        <div>
+          <h3>Site Links</h3>
+          <ul class="list">
+            <li><a href="#">Help and Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Join Our Clubs</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perferendis, minus.
+          </p>
+          <a href="#">Join Now</a>
+        </div>
+        <div>
+          <p>Copyright &copy; 2024, All Right Reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
